add how to build java image